# simple-renderer

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: framebuffers_screen.frag  lighting.frag  lighting.vert  modelShader.frag  modelShader.vert  modelUnlit.Frag  modelUnlit.vert  triangle.frag  triangle.vert
include/: camera.h  main.h  mesh.h  model.h  shader.h
libs/glad/include/glad/: gl.h
libs/glfw/: glfw-config.cmake
src/: defines.h  main.cpp  mesh.h
src/AssetManager/: AssetManager.h
src/GameObject/: GameObject.cpp  GameObject.h
src/assets/: asset_manager.h
src/ecs/: component_manager.cpp  component_manager.h  ecs.cpp  ecs.h  scene.cpp  scene.h
src/rendering/: gpu_resource_manager.h  renderer.h
